--- a/styles.css
+++ b/styles.css
@@ -1780,8 +1780,8 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .form-group {
-        min-width: 160px;
-        max-width: 160px;
+        min-width: 170px; /* Zwiększamy, aby dopasować do wizualnej szerokości suwaka */
+        max-width: 170px;
     }
 
     .variable-input-group[data-type="nadplata"] .fields-wrapper {
@@ -1790,36 +1790,36 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="nadplata"] .form-group {
-        min-width: 160px;
-        max-width: 160px;
+        min-width: 170px;
+        max-width: 170px;
     }
 
     .variable-input-group[data-type="nadplata"] .form-control {
-        width: 110px; /* 160px - 50px dla jednostki "miesiącu" */
+        width: 115px; /* 170px - 55px dla jednostki "miesiącu" */
         border: none;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .input-group,
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(4) .input-group {
-        width: 160px;
+        width: 170px;
         flex-direction: row;
         align-items: center;
         border: 1px solid var(--border-color);
         border-radius: var(--border-radius);
-        padding: 0; /* Usuwamy padding */
-        height: 22px; /* Ustalamy wysokość taką samą jak input */
+        padding: 0 1px; /* Dodajemy niewielki padding */
+        height: 22px;
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-control {
-        width: 110px;
+        width: 115px;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .input-group-text.unit-miesiacu {
-        width: 50px;
-        min-width: 50px;
-        font-size: 0.6em; /* Zwiększamy czcionkę */
+        width: 55px;
+        min-width: 55px;
+        font-size: 0.6em;
         border: none;
         background: var(--input-group-bg);
         padding: 0 2px;
@@ -1827,7 +1827,7 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(4) .form-control {
-        width: 130px; /* 160px - 30px dla jednostki "zł" */
+        width: 140px; /* 170px - 30px dla jednostki "zł" */
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
@@ -1842,12 +1842,12 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="nadplata"] .input-group {
-        width: 160px;
+        width: 170px;
     }
 
     .variable-input-group[data-type="nadplata"] .nadplata-type-select,
     .variable-input-group[data-type="nadplata"] .nadplata-effect-select {
-        width: 160px;
+        width: 170px;
     }
 
     .variable-input-group[data-type="oprocentowanie"] .fields-wrapper {
@@ -1856,35 +1856,35 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group {
-        min-width: 160px;
-        max-width: 160px;
+        min-width: 170px;
+        max-width: 170px;
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-control {
-        width: 105px; /* 160px - 55px dla jednostki "miesiąca" */
+        width: 110px; /* 170px - 60px dla jednostki "miesiąca" */
         border: none;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-control.variable-cykl {
-        width: 105px;
+        width: 110px;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(1) .input-group,
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(2) .input-group {
-        width: 160px;
+        width: 170px;
         flex-direction: row;
         align-items: center;
         border: 1px solid var(--border-color);
         border-radius: var(--border-radius);
-        padding: 0;
+        padding: 0 1px;
         height: 22px;
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(1) .input-group-text {
-        width: 55px;
-        min-width: 55px;
+        width: 60px;
+        min-width: 60px;
         font-size: 0.6em;
         border: none;
         background: var(--input-group-bg);
@@ -1893,7 +1893,7 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(2) .form-control {
-        width: 130px; /* 160px - 30px dla jednostki "%" */
+        width: 140px; /* 170px - 30px dla jednostki "%" */
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
@@ -1908,26 +1908,26 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="oprocentowanie"] .input-group {
-        width: 160px;
+        width: 170px;
     }
 
     .input-group {
-        width: 160px;
+        width: 170px;
     }
 
     #prowizja .input-group {
-        width: 160px;
+        width: 170px;
     }
 
-    /* Dopasowanie suwaków do szerokości boxów */
+    /* Dopasowanie suwaków */
     input[type="range"].form-range {
         box-sizing: border-box;
-        width: 160px;
-        padding: 0; /* Usuwamy padding, aby thumb nie wystawał */
+        width: 170px;
+        padding: 0;
     }
 
     input[type="range"].form-range::-webkit-slider-thumb {
-        transform: translateY(2px); /* Upewniamy się, że thumb nie wpływa na szerokość */
+        transform: translateY(2px);
     }
 
     input[type="range"].form-range::-moz-range-thumb {
