--- a/styles.css
+++ b/styles.css
@@ -1780,8 +1780,8 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .form-group {
-        min-width: 186px; /* Zwiększamy, aby dopasować do wizualnej szerokości suwaka z thumb */
-        max-width: 186px;
+        min-width: 188px; /* Zwiększamy, aby dopasować do wizualnej szerokości suwaka z thumb */
+        max-width: 188px;
     }
 
     .variable-input-group[data-type="nadplata"] .fields-wrapper {
@@ -1790,30 +1790,30 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="nadplata"] .form-group {
-        min-width: 186px;
-        max-width: 186px;
+        min-width: 188px;
+        max-width: 188px;
     }
 
     .variable-input-group[data-type="nadplata"] .form-control {
-        width: 131px; /* 186px - 55px dla jednostki "miesiącu" */
-        border: 1px solid var(--border-color); /* Przywrócenie obramowania */
-        border-right: none; /* Brak obramowania po prawej */
+        width: 133px; /* 188px - 55px dla jednostki "miesiącu" */
+        border: 1px solid var(--border-color);
+        border-right: none;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .input-group,
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(4) .input-group {
-        width: 186px;
+        width: 188px;
         flex-direction: row;
         align-items: center;
-        border: none; /* Usuwamy obramowanie z .input-group */
+        border: none;
         border-radius: var(--border-radius);
         padding: 0 1px;
         height: 22px;
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-control {
-        width: 131px;
+        width: 133px;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
@@ -1821,15 +1821,15 @@ input[type="range"].form-range:focus::-ms-thumb {
         width: 55px;
         min-width: 55px;
         font-size: 0.6em;
-        border: 1px solid var(--border-color); /* Przywrócenie obramowania */
-        border-left: none; /* Brak obramowania po lewej */
-        background: transparent; /* Usuwamy tło */
+        border: 1px solid var(--border-color);
+        border-left: none;
+        background: var(--input-group-bg); /* Przywracamy tło */
         padding: 0 2px;
         border-radius: 0 var(--border-radius) var(--border-radius) 0;
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(4) .form-control {
-        width: 156px; /* 186px - 30px dla jednostki "zł" */
+        width: 158px; /* 188px - 30px dla jednostki "zł" */
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
@@ -1839,18 +1839,18 @@ input[type="range"].form-range:focus::-ms-thumb {
         font-size: 0.6em;
         border: 1px solid var(--border-color);
         border-left: none;
-        background: transparent;
+        background: var(--input-group-bg);
         padding: 0 2px;
         border-radius: 0 var(--border-radius) var(--border-radius) 0;
     }
 
     .variable-input-group[data-type="nadplata"] .input-group {
-        width: 186px;
+        width: 188px;
     }
 
     .variable-input-group[data-type="nadplata"] .nadplata-type-select,
     .variable-input-group[data-type="nadplata"] .nadplata-effect-select {
-        width: 186px;
+        width: 188px;
     }
 
     .variable-input-group[data-type="oprocentowanie"] .fields-wrapper {
@@ -1859,25 +1859,25 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group {
-        min-width: 186px;
-        max-width: 186px;
+        min-width: 188px;
+        max-width: 188px;
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-control {
-        width: 126px; /* 186px - 60px dla jednostki "miesiąca" */
+        width: 128px; /* 188px - 60px dla jednostki "miesiąca" */
         border: 1px solid var(--border-color);
         border-right: none;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-control.variable-cykl {
-        width: 126px;
+        width: 128px;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(1) .input-group,
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(2) .input-group {
-        width: 186px;
+        width: 188px;
         flex-direction: row;
         align-items: center;
         border: none;
@@ -1892,13 +1892,13 @@ input[type="range"].form-range:focus::-ms-thumb {
         font-size: 0.6em;
         border: 1px solid var(--border-color);
         border-left: none;
-        background: transparent;
+        background: var(--input-group-bg);
         padding: 0 2px;
         border-radius: 0 var(--border-radius) var(--border-radius) 0;
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(2) .form-control {
-        width: 156px; /* 186px - 30px dla jednostki "%" */
+        width: 158px; /* 188px - 30px dla jednostki "%" */
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
@@ -1908,27 +1908,27 @@ input[type="range"].form-range:focus::-ms-thumb {
         font-size: 0.6em;
         border: 1px solid var(--border-color);
         border-left: none;
-        background: transparent;
+        background: var(--input-group-bg);
         padding: 0 2px;
         border-radius: 0 var(--border-radius) var(--border-radius) 0;
     }
 
     .variable-input-group[data-type="oprocentowanie"] .input-group {
-        width: 186px;
+        width: 188px;
     }
 
     .input-group {
-        width: 186px;
+        width: 188px;
     }
 
     #prowizja .input-group {
-        width: 186px;
+        width: 188px;
     }
 
     /* Dopasowanie suwaków */
     input[type="range"].form-range {
         box-sizing: border-box;
-        width: 186px;
+        width: 188px;
         padding: 0;
     }
 
