--- a/styles.css
+++ b/styles.css
@@ -1780,8 +1780,8 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .form-group {
-        min-width: 170px; /* Przywracamy pierwotną szerokość */
-        max-width: 170px;
+        min-width: 171px; /* Dopasowanie do wizualnej szerokości suwaka */
+        max-width: 171px;
     }
 
     .variable-input-group[data-type="nadplata"] .fields-wrapper {
@@ -1790,67 +1790,63 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="nadplata"] .form-group {
-        min-width: 170px;
-        max-width: 170px;
+        min-width: 171px;
+        max-width: 171px;
     }
 
     .variable-input-group[data-type="nadplata"] .form-control {
-        width: 115px; /* 170px - 55px dla jednostki "miesiącu" */
-        border: 1px solid var(--border-color);
-        border-right: none;
+        width: 121px; /* 171px - 50px dla jednostki "miesiącu" */
+        border: none;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .input-group,
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(4) .input-group {
-        width: 170px;
+        width: 171px;
         flex-direction: row;
         align-items: center;
-        border: none;
+        border: 1px solid var(--border-color);
         border-radius: var(--border-radius);
-        padding: 0 1px;
-        height: 22px;
+        padding: 0 2px; /* Dodajemy padding dla lepszej estetyki */
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-control {
-        width: 115px;
+        width: 121px;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .input-group-text.unit-miesiacu {
-        width: 55px;
-        min-width: 55px;
-        font-size: 0.6em;
-        border: 1px solid var(--border-color);
-        border-left: none;
+        width: 50px;
+        min-width: 50px;
+        font-size: 0.55em; /* Zmniejszamy czcionkę */
+        border: none;
         background: var(--input-group-bg);
         padding: 0 2px;
         border-radius: 0 var(--border-radius) var(--border-radius) 0;
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(4) .form-control {
-        width: 140px; /* 170px - 30px dla jednostki "zł" */
+        width: 141px; /* 171px - 30px dla jednostki "zł" */
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(4) .input-group-text.unit-zl {
         width: 30px;
         min-width: 30px;
-        font-size: 0.6em;
-        border: 1px solid var(--border-color);
-        border-left: none;
+        font-size: 0.55em;
+        border: none;
         background: var(--input-group-bg);
         padding: 0 2px;
         border-radius: 0 var(--border-radius) var(--border-radius) 0;
     }
 
     .variable-input-group[data-type="nadplata"] .input-group {
-        width: 170px;
+        width: 171px;
     }
 
     .variable-input-group[data-type="nadplata"] .nadplata-type-select,
     .variable-input-group[data-type="nadplata"] .nadplata-effect-select {
-        width: 170px; /* Przywracamy pierwotną szerokość */
+        width: 171px;
     }
 
     .variable-input-group[data-type="oprocentowanie"] .fields-wrapper {
@@ -1859,89 +1855,66 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group {
-        min-width: 170px;
-        max-width: 170px;
+        min-width: 171px;
+        max-width: 171px;
     }
 
-    .variable-input-group[data-type="oprocentowanie"] .form Université
-        width: 110px; /* 170px - 60px dla jednostki "miesiąca" */
-        border: 1px solid var(--border-color);
-        border-right: none;
+    .variable-input-group[data-type="oprocentowanie"] .form-control {
+        width: 116px; /* 171px - 55px dla jednostki "miesiąca" */
+        border: none;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-control.variable-cykl {
-        width: 110px;
+        width: 116px;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(1) .input-group,
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(2) .input-group {
-        width: 170px;
+        width: 171px;
         flex-direction: row;
         align-items: center;
-        border: none;
+        border: 1px solid var(--border-color);
         border-radius: var(--border-radius);
-        padding: 0 1px;
-        height: 22px;
+        padding: 0 2px;
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(1) .input-group-text {
-        width: 60px;
-        min-width: 60px;
-        font-size: 0.6em;
-        border: 1px solid var(--border-color);
-        border-left: none;
+        width: 55px;
+        min-width: 55px;
+        font-size: 0.55em;
+        border: none;
         background: var(--input-group-bg);
         padding: 0 2px;
         border-radius: 0 var(--border-radius) var(--border-radius) 0;
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(2) .form-control {
-        width: 140px; /* 170px - 30px dla jednostki "%" */
+        width: 141px; /* 171px - 30px dla jednostki "%" */
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(2) .input-group-text {
         width: 30px;
         min-width: 30px;
-        font-size: 0.6em;
-        border: 1px solid var(--border-color);
-        border-left: none;
+        font-size: 0.55em;
+        border: none;
         background: var(--input-group-bg);
         padding: 0 2px;
         border-radius: 0 var(--border-radius) var(--border-radius) 0;
     }
 
     .variable-input-group[data-type="oprocentowanie"] .input-group {
-        width: 170px;
+        width: 171px;
     }
 
     .input-group {
-        width: 170px;
+        width: 171px;
     }
 
     #prowizja .input-group {
-        width: 170px;
-    }
-
-    /* Dopasowanie suwaków */
-    input[type="range"].form-range {
-        box-sizing: border-box;
-        width: 170px;
-        padding: 0;
-    }
-
-    input[type="range"].form-range::-webkit-slider-thumb {
-        transform: translateY(2px);
-    }
-
-    input[type="range"].form-range::-moz-range-thumb {
-        transform: none;
-    }
-
-    input[type="range"].form-range::-ms-thumb {
-        transform: none;
+        width: 171px;
     }
 
     .chart-container {
